# notion-fairy

./: README.md  app.py  pyproject.toml  requirements.txt
components/: blocks.py  connections.py  notion.py
